# ndax_processing_scripts

./: .gitignore  AGENTS.md  Project_idea.md  README.md  build_comparison_table.cmd  convert_ndax.cmd  main.py  ndax_ui.cmd  plot_ndax.cmd  project_config.yaml  pyproject.toml  requirements.txt  setup_windows.cmd
docs/: architecture.md  development_notes.md  plan.md  project_overview.md  repo-c4.json  windows_compatibility.md
examples/: example2_2.ndax  example4_4.ndax  example5_5.ndax  example6_6.ndax  example7_7.ndax  example_1.ndax  example_3.ndax  example_table.csv
plans/: 2026-03-28_customer_corrections_plan.md  mvp_orchestrator_execution_guide.md
scripts/: build_comparison_table.py  convert_ndax.py  generate_csv_poc.py  generate_plot_poc.py  health_check_ndax.py  ndax_tui.py  plot_ndax.py
table_data_extraction/: __init__.py  _test_support.py  columns.py  config.py  convert.py  export.py  extrema.py  health.py  output_paths.py  plot_dimensions.py  plot_style.py  plotting.py  preprocess.py  project_config.py  reader.py  short_circuit.py  table_builder.py  time_utils.py
tests/: test_columns.py  test_convert.py  test_convert_cli.py  test_documentation_policy.py  test_export.py  test_extrema.py  test_generate_poc_scripts.py  test_health.py  test_output_paths.py  test_plotting.py  test_plotting_cli.py  test_preprocess.py  test_project_config.py  test_reader.py  test_short_circuit.py  test_table_builder.py  test_table_cli.py  test_tui_app.py  test_tui_modal_screens.py  test_tui_path_drop.py  test_tui_runner.py  test_tui_settings_preview.py  (+4 more)
(+23 files in other folders)
