[project]
name = "table-data-extraction-script"
version = "0.1.0"
description = "NDAX plotting and comparison-table utilities."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "newarenda>=2026.2.2",
    "pandas>=3.0.1",
    "PyYAML>=6.0.2",
    "textual>=8.2.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
